# acmed-hook-rfc2136

./: Cargo.toml  README.md  config.toml.sample  flake.nix  package.nix
.github/workflows/: build.yml
src/: cli.rs  config.rs  main.rs
