[package]
name = "acmed-hook-rfc2136"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
clap = { version = "4.4.16", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["base64"] }
time = "0.3.31"
toml = "0.8.8"
hickory-client = { version = "0.24.0", features = ["dnssec", "dnssec-openssl"] }
hickory-proto = { version = "0.24.0", features = ["dnssec-openssl"] }
openssl = { version = "0.10.62", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
backoff = "0.4"
